zapread.com/Content/Site.css
/* ... */
.top-navigation #page-wrapper {
    margin-left: 0;
}

.top-navigation .navbar-nav .dropdown-menu > .active > a {
    background: white;
    color: #1ab394;
    font-weight: bold;
}

.white-bg .navbar-fixed-top,
.white-bg .navbar-static-top {
    background: #fff;
}

.top-navigation .navbar {
    margin-bottom: 0;
}

.top-navigation .nav > li > a {
    /*padding: 15px 20px;*/
    color: #676a6c;
}

.top-navigation .nav > li a:hover,
.top-navigation .nav > li a:focus {
    background: #fff;
    color: #1ab394;
}

.top-navigation .navbar .nav > li.active {
    background: #fff;
    border: none;
}

.top-navigation .nav > li.active > a {
    color: #1ab394;
}

.top-navigation .navbar-right {
    margin-right: 10px;
}

.top-navigation .navbar-nav .dropdown-menu {
    box-shadow: none;
    border: 1px solid #e7eaec;
}

.top-navigation .dropdown-menu > li > a {
    margin: 0;
    padding: 7px 20px;
}

.navbar .dropdown-menu {
    margin-top: 0;
}

.top-navigation .navbar-brand {
    background: #1ab394;
    color: #fff;
    padding: 3px 7px;
}

.top-navigation .navbar-top-links li:last-child {
    margin-right: 0;
}

.top-navigation.mini-navbar #page-wrapper,
.top-navigation.body-small.fixed-sidebar.mini-navbar #page-wrapper,
.mini-navbar .top-navigation #page-wrapper,
.body-small.fixed-sidebar.mini-navbar .top-navigation #page-wrapper,
.canvas-menu #page-wrapper {
    margin: 0;
}

.top-navigation.fixed-nav #wrapper,
.fixed-nav #wrapper.top-navigation {
    margin-top: 50px;
}

.top-navigation .footer.fixed {
    margin-left: 0 !important;
}

.top-navigation .wrapper.wrapper-content {
    padding: 0px;
}

.top-navigation.body-small .wrapper.wrapper-content,
.body-small .top-navigation .wrapper.wrapper-content {
    padding: 40px 0 40px 0;
}

.navbar-toggle {
    background-color: #1ab394;
    color: #fff;
    padding: 6px 12px;
    font-size: 14px;
}

.navbar-toggler {
    background-color: #1ab394;
    color: #fff;
    font-size: 14px;
}


.top-navigation .navbar-nav .open .dropdown-menu > li > a,
.top-navigation .navbar-nav .open .dropdown-menu .dropdown-header {
    padding: 10px 15px 10px 20px;
}

/*@media (max-width: 768px) {
    .top-navigation .navbar-header {
        display: block;
        float: none;
    }
}*/

/*.menu-visible-lg,
.menu-visible-md {
    display: none !important;
}*/

/*@media (min-width: 1200px) {
    .menu-visible-lg {
        display: block !important;
    }
}

@media (min-width: 992px) {
    .menu-visible-md {
        display: block !important;
    }
}

@media (max-width: 767px) {
    .menu-visible-md {
        display: block !important;
    }

    .menu-visible-lg {
        display: block !important;
    }
}*/

.btn {
    border-radius: 3px;
}

.float-e-margins .btn {
    margin-bottom: 5px;
}

.btn-w-m {
    min-width: 120px;
}

.btn-primary.btn-outline {
    color: #1ab394;
}

.btn-success.btn-outline {
    color: #1c84c6;
}

.btn-info.btn-outline {
    color: #23c6c8;
}

.btn-warning.btn-outline {
    color: #f8ac59;
}

.btn-danger.btn-outline {
    color: #ed5565;
}

    .btn-primary.btn-outline:hover,
    .btn-success.btn-outline:hover,
    .btn-info.btn-outline:hover,
    .btn-warning.btn-outline:hover,
    .btn-danger.btn-outline:hover {
        color: #fff;
    }

.btn-primary {
    background-color: #1ab394;
    border-color: #1ab394;
    color: #FFFFFF;
}

    .btn-primary:hover,
    .btn-primary:focus,
    .btn-primary:active,
    .btn-primary.active,
    .open .dropdown-toggle.btn-primary,
    .btn-primary:active:focus,
    .btn-primary:active:hover,
    .btn-primary.active:hover,
    .btn-primary.active:focus {
        background-color: #18a689;
        border-color: #18a689;
        color: #FFFFFF;
    }

    .btn-primary:active,
    .btn-primary.active,
    .open .dropdown-toggle.btn-primary {
        background-image: none;
    }

        .btn-primary.disabled,
        .btn-primary.disabled:hover,
        .btn-primary.disabled:focus,
        .btn-primary.disabled:active,
        .btn-primary.disabled.active,
        .btn-primary[disabled],
        .btn-primary[disabled]:hover,
        .btn-primary[disabled]:focus,
        .btn-primary[disabled]:active,
        .btn-primary.active[disabled],
        fieldset[disabled] .btn-primary,
        fieldset[disabled] .btn-primary:hover,
        fieldset[disabled] .btn-primary:focus,
        fieldset[disabled] .btn-primary:active,
        fieldset[disabled] .btn-primary.active {
            background-color: #1dc5a3;
            border-color: #1dc5a3;
        }

.btn-success {
    background-color: #1c84c6;
    border-color: #1c84c6;
    color: #FFFFFF;
}

    .btn-success:hover,
    .btn-success:focus,
    .btn-success:active,
    .btn-success.active,
    .open .dropdown-toggle.btn-success,
    .btn-success:active:focus,
    .btn-success:active:hover,
    .btn-success.active:hover,
    .btn-success.active:focus {
        background-color: #1a7bb9;
        border-color: #1a7bb9;
        color: #FFFFFF;
    }

    .btn-success:active,
    .btn-success.active,
    .open .dropdown-toggle.btn-success {
        background-image: none;
    }

        .btn-success.disabled,
        .btn-success.disabled:hover,
        .btn-success.disabled:focus,
        .btn-success.disabled:active,
        .btn-success.disabled.active,
        .btn-success[disabled],
        .btn-success[disabled]:hover,
        .btn-success[disabled]:focus,
        .btn-success[disabled]:active,
        .btn-success.active[disabled],
        fieldset[disabled] .btn-success,
        fieldset[disabled] .btn-success:hover,
        fieldset[disabled] .btn-success:focus,
        fieldset[disabled] .btn-success:active,
        fieldset[disabled] .btn-success.active {
            background-color: #1f90d8;
            border-color: #1f90d8;
        }

.btn-info {
    background-color: #23c6c8;
    border-color: #23c6c8;
    color: #FFFFFF;
}
/* ... */

